Adding API call and seting childe routes

--- a/routing-in-vue-advance/package.json
+++ b/routing-in-vue-advance/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.3",
     "@vue/cli-service": "^3.0.3",
+    "axios": "^0.18.0",
     "vue-template-compiler": "^2.5.17"
   }
 }
