--- a/vue-movie-project/package.json
+++ b/vue-movie-project/package.json
@@ -8,7 +8,10 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "vue": "^2.5.17",
+    "vue-moment": "^4.0.0",
+    "vue-moment-tz": "^2.1.1",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
