--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -8,6 +8,8 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "moment": "^2.23.0",
+    "moment-timezone": "^0.5.23",
     "register-service-worker": "^1.5.2",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
