--- a/routing-in-vue/package.json
+++ b/routing-in-vue/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "routing-in-vue",
+  "name": "router-example",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,12 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1"
+    "core-js": "^3.4.4",
+    "vue": "^2.6.10",
+    "vue-router": "^3.1.3"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.0.3",
-    "@vue/cli-service": "^3.0.3",
-    "vue-template-compiler": "^2.5.17"
-  }
+    "@vue/cli-plugin-babel": "^4.1.0",
+    "@vue/cli-plugin-router": "^4.1.0",
+    "@vue/cli-service": "^4.1.0",
+    "vue-template-compiler": "^2.6.10"
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions"
+  ]
 }
